--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -334,6 +334,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a17b2c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"C:/Users/techin/Insurance-analytics_week3/data/df_cleaned.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0e8151b0",
    "metadata": {},
