--- a/notebooks/task4_modeling.ipynb
+++ b/notebooks/task4_modeling.ipynb
@@ -910,6 +910,65 @@
     "\n",
     "shap.summary_plot(shap_values, X_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d71af3d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define model with initial/default hyperparameters\n",
+    "xgb_model = XGBRegressor(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=5,\n",
+    "    learning_rate=0.1,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=0.8,\n",
+    "    random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e1998add",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost RMSE: 27027.2633\n",
+      "XGBoost R²: 0.2389\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = xgb_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"XGBoost RMSE: {rmse:.4f}\")\n",
+    "print(f\"XGBoost R²: {r2:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24e2c772",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
