--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -41,7 +41,7 @@
    "id": "df25309c",
    "metadata": {},
    "source": [
-    "proportion test; claim frequancy vs gender"
+    "# Proportion test; claim frequancy vs gender"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "id": "60d93825",
    "metadata": {},
    "source": [
-    "Independent t_test: claim severity vs gender "
+    "# Independent t_test: claim severity vs gender "
    ]
   },
   {
@@ -146,7 +146,7 @@
    "id": "5721b6f9",
    "metadata": {},
    "source": [
-    "Independent t_test: margin vs Gender"
+    "# Independent t_test: margin vs Gender"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "id": "9c10b4b4",
    "metadata": {},
    "source": [
-    "Chi-square test of association claim frequancy and province"
+    "# Chi-square test of association claim frequancy and province"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "id": "1030ae5f",
    "metadata": {},
    "source": [
-    "ANOVA:Vehicle type vs claim severity"
+    "# ANOVA:Vehicle type vs claim severity"
    ]
   },
   {
@@ -453,14 +453,6 @@
     "print(\"\\n=== Pairwise Comparison (Tukey HSD) ===\")\n",
     "print(tukey.summary())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e7000a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
